--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.4",
+    "jest-preset-angular": "^10.0.1",
     "rxjs": "~6.6.0",
+    "ts-jest": "^27.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
@@ -26,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
+    "@ngneat/spectator": "^8.1.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
